
- The functions LFUN_HTML_INSERT, "html-insert", LFUN_URL_INSERT, "url-insert" was
  superseded by LFUN_HYPERLINK_INSERT, "href-insert".

- The function LFUN_FLOAT_LIST has been renamed to LFUN_FLOAT_LIST_INSERT.

- The functions delete-back/forward has been renamed to char-delete-back/forward.

- The functions LFUN_FONT_FREE_APPLY/UPDATE has been renamed to
  LFUN_TEXTSTYLE_APPLY/UPDATE.


The following new LyX functions have been introduced:

- LFUN_SPECIALCHAR_INSERT, "specialchar-insert" (see above).

- LFUN_COMPLETION_INLINE, "completion-inline".

- LFUN_COMPLETION_POPUP, "completion-popup".

- LFUN_COMPLETION_COMPLETE, "complete".

- LFUN_CLOSE_TAB_GROUP, "close-tab-group".

- LFUN_SPLIT_VIEW, "split-view".

- LFUN_UI_TOGGLE, "ui-toggle".

- LFUN_SCROLL, "scroll".

- LFUN_MATH_MACRO, "math-macro".

- LFUN_MATH_MACRO_UNFOLD, "math-macro-unfold".

- LFUN_MATH_MACRO_FOLD, "math-macro-fold".

- LFUN_MATH_MACRO_ADD_PARAM, "math-macro-add-param".

- LFUN_MATH_MACRO_REMOVE_PARAM, "math-macro-remove-param".

- LFUN_MATH_MACRO_APPEND_GREEDY_PARAM, "math-macro-append-greedy-param".

- LFUN_MATH_MACRO_REMOVE_GREEDY_PARAM, "math-macro-remove-greedy-param".

- LFUN_MATH_MACRO_MAKE_OPTIONAL, "math-macro-make-optional".

- LFUN_MATH_MACRO_MAKE_NONOPTIONAL, "math-macro-make-nonoptional".

- LFUN_MATH_MACRO_ADD_OPTIONAL_PARAM, "math-macro-add-optional-param".

- LFUN_MATH_MACRO_REMOVE_OPTIONAL_PARAM, "math-macro-remove-optional-param".

- LFUN_MATH_MACRO_ADD_GREEDY_OPTIONAL_PARAM, "math-macro-add-greedy-optional-param".

- LFUN_WORD_LEFT, "word-left".

- LFUN_WORD_LEFT_SELECT, "word-left-select".

- LFUN_WORD_RIGHT, "word-right".

- LFUN_WORD_RIGHT_SELECT, "word-right-select".

- LFUN_CHAR_LEFT, "char-left".

- LFUN_CHAR_LEFT_SELECT, "char-left-select".

- LFUN_CHAR_RIGHT, "char-right".

- LFUN_CHAR_RIGHT_SELECT, "char-right-select".

- LFUN_FINISHED_FORWARD, "".

- LFUN_FINISHED_BACKWARD, "".

- LFUN_INFO_INSERT, "info-insert".

- LFUN_LAYOUT_RELOAD, "layout-reload".
