@@ -136,7 +136,7 @@ enum FuncCode
 	LFUN_SERVER_CHAR_AFTER,
 	LFUN_LINEATCURSOR,
 	LFUN_SERVER_GET_LAYOUT,
-	LFUN_SERVER_GET_NAME,
+	LFUN_SERVER_GET_FILENAME,
 	// 90
 	LFUN_SERVER_NOTIFY,
 	LFUN_SERVER_GOTO_FILE_ROW,
